--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">DataBinding</string>
 
+
+    <string name="title_activity_details">DetailsActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    
+    <string name="user_no_name">El usuario no tiene nombre</string>
+
 </resources>
